# libfacerec

./: AUTHORS.md  CMakeLists.txt  README.md
doc/: Makefile  make.bat
doc/source/: api.rst  changelog.rst  colormaps.rst  conf.py  facerec.rst  facerec_tutorial.rst  index.rst  tutorial.rst
doc/source/api/: api.rst  examples.rst
doc/source/api/class/: class_colormap.rst  class_eigenfaces.rst  class_facerecognizer.rst  class_fisherfaces.rst  class_lbph.rst
doc/source/api/example/: example_eigenfaces.rst  example_fisherfaces.rst  example_gender_classification.rst  example_lbph.rst
doc/source/changelog/: changelog.rst
doc/source/src/: facerec_save_load.cpp
doc/source/tutorial/: facerec_gender_classification.rst  facerec_save_load.rst  facerec_video_recognition.rst  tutorial.rst
doc/source/tutorial_old/: facerecognizer_eigenfaces.rst  tutorial.rst
doc/source/tutorial_old/section/: databases.rst  fisherfaces.rst  lbp.rst
include/: colormap.hpp  decomposition.hpp  eigenfaces.hpp  facerec.hpp  fisherfaces.hpp  helper.hpp  lbp.hpp  serialization.hpp  spatial.hpp  subspace.hpp
include/colormap/: colormap.hpp
samples/: facerec_demo.cpp  facerec_eigenfaces.cpp  facerec_fisherfaces.cpp  facerec_lbph.cpp  facerec_video.cpp
samples/roc/: precision_recall.py  roc_eigenfaces.cpp
src/: colormap.cpp  decomposition.cpp  eigenfaces.cpp  facerec.cpp  fisherfaces.cpp  helper.cpp  lbp.cpp  main.cpp  spatial.cpp  subspace.cpp
test/: test_facerecognizers.cpp  test_funs.hpp  test_helper.cpp  test_lbp.cpp  test_lda.cpp  test_main.cpp  test_mat.cpp  test_precomp.hpp  test_subspace.cpp
